--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
              Try it free 7 days<span>then $20/mo. thereafter</span></button>
           </p>
         <form>
-          <input type="text" placeholder="First Name" style="margin-top: 24px;">
-          <input type="text" placeholder="Last Name">
-          <input type="email" placeholder="Email Address">
-          <input type="password" placeholder="Password">
-          <button>CLAIM YOUR FREE TRIAL</button>
+          <input type="text" placeholder="First Name" style="margin-top: 24px;" id="first-name">
+          <input type="text" placeholder="Last Name" id="last-name">
+          <input type="email" placeholder="Email Address" id="email-addres">
+          <input type="password" placeholder="Password" id="password">
+          <button id="button" type="button">CLAIM YOUR FREE TRIAL</button>
           <p>By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
         </form>
       </div>
   </div>
-  
+  <h2 class="congratulation">congratulation</h2>
+  <script src="./index.js"></script>
 </body>
 </html>
